# src/Application/GroupJoinRequests/GetPendingGroupJoinRequests/Query.cs
@@ -1,0 +1,6 @@
+using Domain.Abstractions;
+using MediatR;
+
+namespace Application.GroupJoinRequests.GetPendingGroupJoinRequests;
+
+public record Query : IRequest<Result<IReadOnlyList<GroupJoinRequestDto>>>;
