# src/Application/GroupJoinRequests/SubmitGroupJoinRequest/Command.cs
@@ -1,0 +1,7 @@
+using Domain.Abstractions;
+using Domain.Ids;
+using MediatR;
+
+namespace Application.GroupJoinRequests.SubmitGroupJoinRequest;
+
+public record Command(StudentId StudentId, GroupId GroupId) : IRequest<Result<GroupJoinRequestId>>;
